--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "test": "vitest",
     "preview": "vite preview"
   },
   "dependencies": {
     "@ramonak/react-progress-bar": "^5.2.0",
+    "@tanstack/query-sync-storage-persister": "^5.59.13",
     "@tanstack/react-query": "^5.29.2",
     "@tanstack/react-query-devtools": "^5.29.2",
+    "@tanstack/react-query-persist-client": "^5.59.13",
     "frappe-gantt": "^0.6.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
@@ -25,6 +28,7 @@
     "react-icons": "^5.0.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.3",
+    "socket.io-client": "^4.8.0",
     "sort-by": "^0.0.2",
     "sweetalert2": "^11.6.13",
     "universal-cookie": "^7.1.4"
