--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -38,4 +38,30 @@ jobs:
           path: ~/.npm
           # Llave única para identificar el caché
           key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
-
+  notify-on-success:
+    runs-on: ubuntu-latest
+    needs: [setup]
+    if: job.status == 'success'
+    steps:
+      # Enviamos un correo electrónico a mi cuenta
+      - name: Notificar Exito
+        uses: softprops/gmail@v1
+        with:
+          from: ${{ secrets.GMAIL_ADDRESS }}
+          to: ${{ secrets.GMAIL_ADDRESS_RECIPIENT }}
+          subject: El repositorio ha pasado las pruebas correctamente.
+          body: El repositorio ha superado las pruebas correctamente. Puedes ver los detalles en https://github.com/${{ github.repository }}/actions?query=workflow%3A${{ github.workflow }}+event%3A${{ github.event_name }}
+  notify-on-failure:
+    runs-on: ubuntu-latest
+    needs: [setup]
+    if: job.status == 'failure'
+    steps:
+      # Enviamos un correo electrónico a mi cuenta
+      - name: Notificar Error
+        uses: softprops/gmail@v1
+        with:
+          from: ${{ secrets.GMAIL_ADDRESS }}
+          to: ${{ secrets.GMAIL_ADDRESS_RECIPIENT }}
+          subject: El repositorio ha fallado en las pruebas.
+          body: El repositorio ha fallado en las pruebas. Puedes ver los detalles en https://github.com/${{ github.repository }}/actions?query=workflow%3A${{ github.workflow }}+event%3A${{ github.event_name }}
+      
