--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -41,7 +41,7 @@ jobs:
   notify-on-success:
     runs-on: ubuntu-latest
     needs: [setup]
-    if: job.status == 'success'
+    if: needs.setup.result == 'success'
     steps:
       # Enviamos un correo electrónico a mi cuenta
       - name: Notificar Exito
@@ -54,7 +54,7 @@ jobs:
   notify-on-failure:
     runs-on: ubuntu-latest
     needs: [setup]
-    if: job.status == 'failure'
+    if: needs.setup.result == 'failure'
     steps:
       # Enviamos un correo electrónico a mi cuenta
       - name: Notificar Error
@@ -64,4 +64,3 @@ jobs:
           to: ${{ secrets.GMAIL_ADDRESS_RECIPIENT }}
           subject: El repositorio ha fallado en las pruebas.
           body: El repositorio ha fallado en las pruebas. Puedes ver los detalles en https://github.com/${{ github.repository }}/actions?query=workflow%3A${{ github.workflow }}+event%3A${{ github.event_name }}
-      
