--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -38,6 +38,18 @@ jobs:
           path: ~/.npm
           # Llave única para identificar el caché
           key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
+      - name: Comentar en PR
+        uses: actions/github-script@v4
+        with:
+          script: |
+            github.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: 'Se han realizado cambios en este PR. Por favor, revisen.'
+            })    
+
+
   notify-on-success:
     runs-on: ubuntu-latest
     needs: [setup]
@@ -55,6 +67,8 @@ jobs:
           body: El repositorio ha superado las pruebas correctamente. Puedes ver los detalles en https://github.com/${{ github.repository }}/actions?query=workflow%3A${{ github.workflow }}+event%3A${{ github.event_name }}
           to: ${{ secrets.GMAIL_ADDRESS_RECIPIENT }}
           from: ${{ secrets.GMAIL_ADDRESS }}
+
+          
   notify-on-failure:
     runs-on: ubuntu-latest
     needs: [setup]
@@ -72,4 +86,4 @@ jobs:
           body: El repositorio ha fallado en las pruebas. Puedes ver los detalles en https://github.com/${{ github.repository }}/actions?query=workflow%3A${{ github.workflow }}+event%3A${{ github.event_name }}
           to: ${{ secrets.GMAIL_ADDRESS_RECIPIENT }}
           from: ${{ secrets.GMAIL_ADDRESS }}
-
+  
