--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -38,6 +38,24 @@ jobs:
           path: ~/.npm
           # Llave única para identificar el caché
           key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
+
+      - name: Comentar en PR
+        uses: actions/github-script@v4
+        with:
+          script: |
+            const { context, github } = require('@actions/github');
+            const token = process.env.GITHUB_TOKEN;
+
+            github.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: 'Se han realizado cambios en este PR. Por favor, revisen.',
+              headers: {
+                authorization: `token ${token}`
+              }
+            })
+            
   notify-on-success:
     runs-on: ubuntu-latest
     needs: [setup]
