--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -43,23 +43,17 @@ jobs:
         uses: actions/github-script@v4
         with:
           script: |
-            const { context, github } = require('@actions/github');
-            const token = process.env.GITHUB_TOKEN;
-
             github.issues.createComment({
-              issue_number: context.issue.number,
+              issue_number: context.payload.pull_request.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: 'Se han realizado cambios en este PR. Por favor, revisen.',
-              headers: {
-                authorization: `token ${token}`
-              }
+              body: 'Se han realizado cambios en este PR. Por favor, revisen.'
             })
             
   notify-on-success:
     runs-on: ubuntu-latest
     needs: [setup]
-    if: needs.setup.result == 'success'
+    if: always() && needs.setup.result == 'success'
     steps:
       # Enviamos un correo electrónico a mi cuenta
       - name: Notificar Exito
@@ -72,7 +66,7 @@ jobs:
   notify-on-failure:
     runs-on: ubuntu-latest
     needs: [setup]
-    if: needs.setup.result == 'failure'
+    if: always() && failure()
     steps:
       # Enviamos un correo electrónico a mi cuenta
       - name: Notificar Error
