--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,6 +16,9 @@ on:
 jobs:
   setup:
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
+      issues: write
     steps:
       # Obtenemos el código fuente del repositorio
       - name: Checkout Código
@@ -42,14 +45,15 @@ jobs:
       - name: Comentar en PR
         uses: actions/github-script@v4
         with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             github.issues.createComment({
               issue_number: context.payload.pull_request.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
               body: 'Se han realizado cambios en este PR. Por favor, revisen.'
-            }) 
-
+            })
+            
   notify-on-success:
     runs-on: ubuntu-latest
     needs: [setup]
