--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "test": "vitest",
+    "test": "testcafe edge ./tests/test.js",
     "preview": "vite preview"
   },
   "dependencies": {
