--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -76,17 +76,6 @@ jobs:
       - name: Instalar Dependencias para TestCafe
         run: npm install -g testcafe
 
-      # Instalamos las dependencias para las pruebas con TestCafe como firefox
-      - name: Instalar Firefox para TestCafe
-        run: | 
-          cd .github/workflows
-          ls -al
-          chmod +x firefox.sh
-          ls -al
-          ./firefox.sh
-          ls -al 
-      # Cachear los módulos instalados para evitar volver a instalarlos
-
       # en futuras ejecuciones
       - name: Configurar Caché
         uses: actions/cache@v2
@@ -102,7 +91,7 @@ jobs:
             
   notify-on-success:
     runs-on: ubuntu-latest
-    needs: [setup]
+    needs: [test]
     if: always() && needs.setup.result == 'success'
     steps:
       # Enviamos un correo electrónico a mi cuenta
@@ -121,7 +110,7 @@ jobs:
           
   notify-on-failure:
     runs-on: ubuntu-latest
-    needs: [setup]
+    needs: [test]
     if: always() && failure()
     steps:
       # Enviamos un correo electrónico a mi cuenta
