--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@cloudinary/react": "^1.13.1",
     "@cloudinary/url-gen": "^1.21.0",
     "@ramonak/react-progress-bar": "^5.2.0",
+    "@sentry/react": "^8.40.0",
+    "@sentry/vite-plugin": "^2.22.6",
     "@tanstack/query-sync-storage-persister": "^5.59.13",
     "@tanstack/react-query": "^5.29.2",
     "@tanstack/react-query-devtools": "^5.29.2",
@@ -26,6 +28,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-ga4": "^2.1.0",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.0.1",
     "react-modal": "^3.16.1",
