--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -88,14 +88,42 @@ jobs:
       # Ejecutamos las pruebas
       - name: Ejecutar Pruebas
         run: npm run test
-            
-  notify-on-success:
+        
+  Deploy-Preview:
     runs-on: ubuntu-latest
     needs: [test]
-    if: always() && needs.setup.result == 'success'
     steps:
-      # Enviamos un correo electrónico a mi cuenta
-      - name: Notificar Exito
+      - uses: actions/checkout@v2
+      - name: Install Vercel CLI
+        run: npm install --global vercel@latest
+      - name: Pull Vercel Environment Information
+        run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
+      - name: Build Project Artifacts
+        run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
+      - name: Deploy Project Artifacts to Vercel
+        run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
+  
+  Deploy-Production:
+    runs-on: ubuntu-latest
+    needs: [Deploy-Preview]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install Vercel CLI
+        run: npm install --global vercel@latest
+      - name: Pull Vercel Environment Information
+        run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
+      - name: Build Project Artifacts
+        run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
+      - name: Deploy Project Artifacts to Vercel
+        run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
+  
+
+  notify-on-success:
+    runs-on: ubuntu-latest
+    needs: [test, Deploy-Preview, Deploy-Production]
+    if: always() && (needs.test.result == 'success' || needs.Deploy-Preview.result == 'success' || needs.Deploy-Production.result == 'success')
+    steps:
+      - name: Notificar éxito
         uses: dawidd6/action-send-mail@v3
         with:
           server_address: smtp.gmail.com
@@ -110,7 +138,6 @@ jobs:
           
   notify-on-failure:
     runs-on: ubuntu-latest
-    needs: [test]
     if: always() && failure()
     steps:
       # Enviamos un correo electrónico a mi cuenta
@@ -121,8 +148,8 @@ jobs:
           server_port: 465
           username: ${{ secrets.GMAIL_ADDRESS }}
           password: ${{ secrets.GMAIL_APP_PASSWORD }}
-          subject: El repositorio ha fallado en las pruebas.
-          body: El repositorio ha fallado en las pruebas. Puedes ver los detalles en https://github.com/${{ github.repository }}/actions?query=workflow%3A${{ github.workflow }}+event%3A${{ github.event_name }}
+          subject: "El repositorio ha fallado en el job: ${{ failure() }}."
+          body: "El repositorio ha fallado en el job: ${{ failure() }}. Puedes ver los detalles en https://github.com/${{ github.repository }}/actions?query=workflow%3A${{ github.workflow }}+event%3A${{ github.event_name }}"
           to: ${{ secrets.GMAIL_ADDRESS_RECIPIENT }}
           from: ${{ secrets.GMAIL_ADDRESS }}
   
