--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -138,7 +138,7 @@ jobs:
           
   notify-on-failure:
     runs-on: ubuntu-latest
-    if: always() && failure()
+    if: failure()
     steps:
       # Enviamos un correo electrónico a mi cuenta
       - name: Notificar Error
@@ -148,8 +148,9 @@ jobs:
           server_port: 465
           username: ${{ secrets.GMAIL_ADDRESS }}
           password: ${{ secrets.GMAIL_APP_PASSWORD }}
-          subject: "El repositorio ha fallado en el job: ${{ failure() }}."
-          body: "El repositorio ha fallado en el job: ${{ failure() }}. Puedes ver los detalles en https://github.com/${{ github.repository }}/actions?query=workflow%3A${{ github.workflow }}+event%3A${{ github.event_name }}"
+          subject: "El job ${needs.test.result == 'failure' ? 'test' : needs.Deploy-Preview.result == 'failure' ? 'Deploy-Preview' : 'Deploy-Production'} ha fallado."
+          body: "El job ${needs.test.result == 'failure' ? 'test' : needs.Deploy-Preview.result == 'failure' ? 'Deploy-Preview' : 'Deploy-Production'} ha fallado. Puedes ver los detalles en https://github.com/${{ github.repository }}/actions?query=workflow%3A${{ github.workflow }}+event%3A${{ github.event_name }}"
           to: ${{ secrets.GMAIL_ADDRESS_RECIPIENT }}
           from: ${{ secrets.GMAIL_ADDRESS }}
   
+
